# warehouse

./: .gitignore  pyproject.toml  run.py
app/: auth.py  config.py  crud.py  database.py  main.py  models.py
app/api/: api.py  deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: admin.py  auth.py  inventory.py  orders.py  products.py  supplies.py  users.py  warehouses.py
app/core/: security.py
app/crud/: base.py  inventory.py  order.py  product.py  supply.py  user.py  warehouse.py
app/frontend/: routes.py
app/frontend/static/css/: admin.css
app/frontend/static/js/: admin.js
app/frontend/templates/: base.html  index.html
app/frontend/templates/admin/: dashboard.html
app/models/: __init__.py  inventory.py  order.py  product.py  supply.py  user.py  warehouse.py
app/schemas/: inventory.py  order.py  product.py  supply.py  user.py  warehouse.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: api.ts  auth.ts  index.ts  users.ts
frontend/src/components/layout/: AdminLayout.tsx  EmployeeLayout.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  ConfirmDialog.tsx  Input.tsx  Modal.tsx  Table.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Login.tsx
frontend/src/pages/admin/: Dashboard.tsx  Orders.tsx  Products.tsx  Users.tsx  Warehouses.tsx
frontend/src/services/: api.ts
frontend/src/types/: auth.tsx  index.tsx  orders.tsx  products.tsx  supply.tsx  users.tsx  warehouses.tsx
scripts/: create_admin.py  init_db.py
(+4 files in other folders)
